Moved all the scripts tags into the head tag for better code readability(Issue#29 solved here). Solved Issue#35 in this commit by adding a new scripts folder and adding app.js file to it for better folder structure.

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 
 .fade {
   transition-duration: 1s;
-  background: var(--color-secondary);
+  /* background: var(--color-secondary); */
 }
 
 
